--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,13 +38,6 @@ ol, ul {
 }
 
 
-.line {
-	height: 7px;
-    color: grey;
-	background-color: grey;
-
-}
-
 blockquote, q {
 	quotes: none;
 }
@@ -2244,79 +2237,7 @@ input, select, textarea {
 				background-color: #1ebdd1;
 			}
 
-/* Form */
 
-	form {
-		margin: 0 0 2rem 0;
-	}
-
-		form > :last-child {
-			margin-bottom: 0;
-		}
-
-		form > .fields {
-			display: -moz-flex;
-			display: -webkit-flex;
-			display: -ms-flex;
-			display: flex;
-			-moz-flex-wrap: wrap;
-			-webkit-flex-wrap: wrap;
-			-ms-flex-wrap: wrap;
-			flex-wrap: wrap;
-			width: calc(100% + 3rem);
-			margin: -1.5rem 0 2rem -1.5rem;
-		}
-
-			form > .fields > .field {
-				-moz-flex-grow: 0;
-				-webkit-flex-grow: 0;
-				-ms-flex-grow: 0;
-				flex-grow: 0;
-				-moz-flex-shrink: 0;
-				-webkit-flex-shrink: 0;
-				-ms-flex-shrink: 0;
-				flex-shrink: 0;
-				padding: 1.5rem 0 0 1.5rem;
-				width: calc(100% - 1.5rem);
-			}
-
-				form > .fields > .field.half {
-					width: calc(50% - 0.75rem);
-				}
-
-				form > .fields > .field.third {
-					width: calc(100%/3 - 0.5rem);
-				}
-
-				form > .fields > .field.quarter {
-					width: calc(25% - 0.375rem);
-				}
-
-		@media screen and (max-width: 480px) {
-
-			form > .fields {
-				width: calc(100% + 3rem);
-				margin: -1.5rem 0 2rem -1.5rem;
-			}
-
-				form > .fields > .field {
-					padding: 1.5rem 0 0 1.5rem;
-					width: calc(100% - 1.5rem);
-				}
-
-					form > .fields > .field.half {
-						width: calc(100% - 1.5rem);
-					}
-
-					form > .fields > .field.third {
-						width: calc(100% - 1.5rem);
-					}
-
-					form > .fields > .field.quarter {
-						width: calc(100% - 1.5rem);
-					}
-
-		}
 
 	label {
 		display: block;
@@ -5840,7 +5761,7 @@ input, select, textarea {
 		background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='64px' height='32px' viewBox='0 0 64 32' zoomAndPan='disable'%3E%3Cstyle%3Erect %7Bfill: transparent%3B stroke: white%3B stroke-width: 1px%3B %7D%3C/style%3E%3Crect rx='4' ry='4' x='6' y='4' width='52' height='24' vector-effect='non-scaling-stroke' /%3E%3C/svg%3E");
 	}
 
-/* Gallery (transitions) */
+/* Gallery (transitions) 
 
 	.gallery.onload-fade-in article .image img {
 		-moz-transition: opacity 0.75s ease-in-out;
@@ -5858,483 +5779,12 @@ input, select, textarea {
 		-webkit-transition-delay: 0s;
 		-ms-transition-delay: 0s;
 		transition-delay: 0s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(2) .image img {
-		-moz-transition-delay: 0.15s;
-		-webkit-transition-delay: 0.15s;
-		-ms-transition-delay: 0.15s;
-		transition-delay: 0.15s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(3) .image img {
-		-moz-transition-delay: 0.3s;
-		-webkit-transition-delay: 0.3s;
-		-ms-transition-delay: 0.3s;
-		transition-delay: 0.3s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(4) .image img {
-		-moz-transition-delay: 0.45s;
-		-webkit-transition-delay: 0.45s;
-		-ms-transition-delay: 0.45s;
-		transition-delay: 0.45s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(5) .image img {
-		-moz-transition-delay: 0.6s;
-		-webkit-transition-delay: 0.6s;
-		-ms-transition-delay: 0.6s;
-		transition-delay: 0.6s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(6) .image img {
-		-moz-transition-delay: 0.75s;
-		-webkit-transition-delay: 0.75s;
-		-ms-transition-delay: 0.75s;
-		transition-delay: 0.75s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(7) .image img {
-		-moz-transition-delay: 0.9s;
-		-webkit-transition-delay: 0.9s;
-		-ms-transition-delay: 0.9s;
-		transition-delay: 0.9s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(8) .image img {
-		-moz-transition-delay: 1.05s;
-		-webkit-transition-delay: 1.05s;
-		-ms-transition-delay: 1.05s;
-		transition-delay: 1.05s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(9) .image img {
-		-moz-transition-delay: 1.2s;
-		-webkit-transition-delay: 1.2s;
-		-ms-transition-delay: 1.2s;
-		transition-delay: 1.2s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(10) .image img {
-		-moz-transition-delay: 1.35s;
-		-webkit-transition-delay: 1.35s;
-		-ms-transition-delay: 1.35s;
-		transition-delay: 1.35s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(11) .image img {
-		-moz-transition-delay: 1.5s;
-		-webkit-transition-delay: 1.5s;
-		-ms-transition-delay: 1.5s;
-		transition-delay: 1.5s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(12) .image img {
-		-moz-transition-delay: 1.65s;
-		-webkit-transition-delay: 1.65s;
-		-ms-transition-delay: 1.65s;
-		transition-delay: 1.65s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(13) .image img {
-		-moz-transition-delay: 1.8s;
-		-webkit-transition-delay: 1.8s;
-		-ms-transition-delay: 1.8s;
-		transition-delay: 1.8s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(14) .image img {
-		-moz-transition-delay: 1.95s;
-		-webkit-transition-delay: 1.95s;
-		-ms-transition-delay: 1.95s;
-		transition-delay: 1.95s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(15) .image img {
-		-moz-transition-delay: 2.1s;
-		-webkit-transition-delay: 2.1s;
-		-ms-transition-delay: 2.1s;
-		transition-delay: 2.1s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(16) .image img {
-		-moz-transition-delay: 2.25s;
-		-webkit-transition-delay: 2.25s;
-		-ms-transition-delay: 2.25s;
-		transition-delay: 2.25s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(17) .image img {
-		-moz-transition-delay: 2.4s;
-		-webkit-transition-delay: 2.4s;
-		-ms-transition-delay: 2.4s;
-		transition-delay: 2.4s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(18) .image img {
-		-moz-transition-delay: 2.55s;
-		-webkit-transition-delay: 2.55s;
-		-ms-transition-delay: 2.55s;
-		transition-delay: 2.55s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(19) .image img {
-		-moz-transition-delay: 2.7s;
-		-webkit-transition-delay: 2.7s;
-		-ms-transition-delay: 2.7s;
-		transition-delay: 2.7s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(20) .image img {
-		-moz-transition-delay: 2.85s;
-		-webkit-transition-delay: 2.85s;
-		-ms-transition-delay: 2.85s;
-		transition-delay: 2.85s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(21) .image img {
-		-moz-transition-delay: 3s;
-		-webkit-transition-delay: 3s;
-		-ms-transition-delay: 3s;
-		transition-delay: 3s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(22) .image img {
-		-moz-transition-delay: 3.15s;
-		-webkit-transition-delay: 3.15s;
-		-ms-transition-delay: 3.15s;
-		transition-delay: 3.15s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(23) .image img {
-		-moz-transition-delay: 3.3s;
-		-webkit-transition-delay: 3.3s;
-		-ms-transition-delay: 3.3s;
-		transition-delay: 3.3s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(24) .image img {
-		-moz-transition-delay: 3.45s;
-		-webkit-transition-delay: 3.45s;
-		-ms-transition-delay: 3.45s;
-		transition-delay: 3.45s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(25) .image img {
-		-moz-transition-delay: 3.6s;
-		-webkit-transition-delay: 3.6s;
-		-ms-transition-delay: 3.6s;
-		transition-delay: 3.6s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(26) .image img {
-		-moz-transition-delay: 3.75s;
-		-webkit-transition-delay: 3.75s;
-		-ms-transition-delay: 3.75s;
-		transition-delay: 3.75s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(27) .image img {
-		-moz-transition-delay: 3.9s;
-		-webkit-transition-delay: 3.9s;
-		-ms-transition-delay: 3.9s;
-		transition-delay: 3.9s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(28) .image img {
-		-moz-transition-delay: 4.05s;
-		-webkit-transition-delay: 4.05s;
-		-ms-transition-delay: 4.05s;
-		transition-delay: 4.05s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(29) .image img {
-		-moz-transition-delay: 4.2s;
-		-webkit-transition-delay: 4.2s;
-		-ms-transition-delay: 4.2s;
-		transition-delay: 4.2s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(30) .image img {
-		-moz-transition-delay: 4.35s;
-		-webkit-transition-delay: 4.35s;
-		-ms-transition-delay: 4.35s;
-		transition-delay: 4.35s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(31) .image img {
-		-moz-transition-delay: 4.5s;
-		-webkit-transition-delay: 4.5s;
-		-ms-transition-delay: 4.5s;
-		transition-delay: 4.5s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(32) .image img {
-		-moz-transition-delay: 4.65s;
-		-webkit-transition-delay: 4.65s;
-		-ms-transition-delay: 4.65s;
-		transition-delay: 4.65s;
-	}
-
-	.gallery.onload-fade-in article:nth-child(33) .image img {
-		-moz-transition-delay: 4.8s;
-		-webkit-transition-delay: 4.8s;
-		-ms-transition-delay: 4.8s;
-		transition-delay: 4.8s;
-	}
-
-	body.is-preload .gallery.onload-fade-in article .image img {
-		opacity: 0;
-	}
-
-	.gallery.onscroll-fade-in article .image img {
-		-moz-transition: opacity 0.75s ease-in-out;
-		-webkit-transition: opacity 0.75s ease-in-out;
-		-ms-transition: opacity 0.75s ease-in-out;
-		transition: opacity 0.75s ease-in-out;
-		-moz-transition-delay: 4.8s;
-		-webkit-transition-delay: 4.8s;
-		-ms-transition-delay: 4.8s;
-		transition-delay: 4.8s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(1) .image img {
-		-moz-transition-delay: 0s;
-		-webkit-transition-delay: 0s;
-		-ms-transition-delay: 0s;
-		transition-delay: 0s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(2) .image img {
-		-moz-transition-delay: 0.15s;
-		-webkit-transition-delay: 0.15s;
-		-ms-transition-delay: 0.15s;
-		transition-delay: 0.15s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(3) .image img {
-		-moz-transition-delay: 0.3s;
-		-webkit-transition-delay: 0.3s;
-		-ms-transition-delay: 0.3s;
-		transition-delay: 0.3s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(4) .image img {
-		-moz-transition-delay: 0.45s;
-		-webkit-transition-delay: 0.45s;
-		-ms-transition-delay: 0.45s;
-		transition-delay: 0.45s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(5) .image img {
-		-moz-transition-delay: 0.6s;
-		-webkit-transition-delay: 0.6s;
-		-ms-transition-delay: 0.6s;
-		transition-delay: 0.6s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(6) .image img {
-		-moz-transition-delay: 0.75s;
-		-webkit-transition-delay: 0.75s;
-		-ms-transition-delay: 0.75s;
-		transition-delay: 0.75s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(7) .image img {
-		-moz-transition-delay: 0.9s;
-		-webkit-transition-delay: 0.9s;
-		-ms-transition-delay: 0.9s;
-		transition-delay: 0.9s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(8) .image img {
-		-moz-transition-delay: 1.05s;
-		-webkit-transition-delay: 1.05s;
-		-ms-transition-delay: 1.05s;
-		transition-delay: 1.05s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(9) .image img {
-		-moz-transition-delay: 1.2s;
-		-webkit-transition-delay: 1.2s;
-		-ms-transition-delay: 1.2s;
-		transition-delay: 1.2s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(10) .image img {
-		-moz-transition-delay: 1.35s;
-		-webkit-transition-delay: 1.35s;
-		-ms-transition-delay: 1.35s;
-		transition-delay: 1.35s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(11) .image img {
-		-moz-transition-delay: 1.5s;
-		-webkit-transition-delay: 1.5s;
-		-ms-transition-delay: 1.5s;
-		transition-delay: 1.5s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(12) .image img {
-		-moz-transition-delay: 1.65s;
-		-webkit-transition-delay: 1.65s;
-		-ms-transition-delay: 1.65s;
-		transition-delay: 1.65s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(13) .image img {
-		-moz-transition-delay: 1.8s;
-		-webkit-transition-delay: 1.8s;
-		-ms-transition-delay: 1.8s;
-		transition-delay: 1.8s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(14) .image img {
-		-moz-transition-delay: 1.95s;
-		-webkit-transition-delay: 1.95s;
-		-ms-transition-delay: 1.95s;
-		transition-delay: 1.95s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(15) .image img {
-		-moz-transition-delay: 2.1s;
-		-webkit-transition-delay: 2.1s;
-		-ms-transition-delay: 2.1s;
-		transition-delay: 2.1s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(16) .image img {
-		-moz-transition-delay: 2.25s;
-		-webkit-transition-delay: 2.25s;
-		-ms-transition-delay: 2.25s;
-		transition-delay: 2.25s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(17) .image img {
-		-moz-transition-delay: 2.4s;
-		-webkit-transition-delay: 2.4s;
-		-ms-transition-delay: 2.4s;
-		transition-delay: 2.4s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(18) .image img {
-		-moz-transition-delay: 2.55s;
-		-webkit-transition-delay: 2.55s;
-		-ms-transition-delay: 2.55s;
-		transition-delay: 2.55s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(19) .image img {
-		-moz-transition-delay: 2.7s;
-		-webkit-transition-delay: 2.7s;
-		-ms-transition-delay: 2.7s;
-		transition-delay: 2.7s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(20) .image img {
-		-moz-transition-delay: 2.85s;
-		-webkit-transition-delay: 2.85s;
-		-ms-transition-delay: 2.85s;
-		transition-delay: 2.85s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(21) .image img {
-		-moz-transition-delay: 3s;
-		-webkit-transition-delay: 3s;
-		-ms-transition-delay: 3s;
-		transition-delay: 3s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(22) .image img {
-		-moz-transition-delay: 3.15s;
-		-webkit-transition-delay: 3.15s;
-		-ms-transition-delay: 3.15s;
-		transition-delay: 3.15s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(23) .image img {
-		-moz-transition-delay: 3.3s;
-		-webkit-transition-delay: 3.3s;
-		-ms-transition-delay: 3.3s;
-		transition-delay: 3.3s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(24) .image img {
-		-moz-transition-delay: 3.45s;
-		-webkit-transition-delay: 3.45s;
-		-ms-transition-delay: 3.45s;
-		transition-delay: 3.45s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(25) .image img {
-		-moz-transition-delay: 3.6s;
-		-webkit-transition-delay: 3.6s;
-		-ms-transition-delay: 3.6s;
-		transition-delay: 3.6s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(26) .image img {
-		-moz-transition-delay: 3.75s;
-		-webkit-transition-delay: 3.75s;
-		-ms-transition-delay: 3.75s;
-		transition-delay: 3.75s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(27) .image img {
-		-moz-transition-delay: 3.9s;
-		-webkit-transition-delay: 3.9s;
-		-ms-transition-delay: 3.9s;
-		transition-delay: 3.9s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(28) .image img {
-		-moz-transition-delay: 4.05s;
-		-webkit-transition-delay: 4.05s;
-		-ms-transition-delay: 4.05s;
-		transition-delay: 4.05s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(29) .image img {
-		-moz-transition-delay: 4.2s;
-		-webkit-transition-delay: 4.2s;
-		-ms-transition-delay: 4.2s;
-		transition-delay: 4.2s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(30) .image img {
-		-moz-transition-delay: 4.35s;
-		-webkit-transition-delay: 4.35s;
-		-ms-transition-delay: 4.35s;
-		transition-delay: 4.35s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(31) .image img {
-		-moz-transition-delay: 4.5s;
-		-webkit-transition-delay: 4.5s;
-		-ms-transition-delay: 4.5s;
-		transition-delay: 4.5s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(32) .image img {
-		-moz-transition-delay: 4.65s;
-		-webkit-transition-delay: 4.65s;
-		-ms-transition-delay: 4.65s;
-		transition-delay: 4.65s;
-	}
-
-	.gallery.onscroll-fade-in article:nth-child(33) .image img {
-		-moz-transition-delay: 4.8s;
-		-webkit-transition-delay: 4.8s;
-		-ms-transition-delay: 4.8s;
-		transition-delay: 4.8s;
-	}
 
 	.gallery.onscroll-fade-in.is-inactive article .image img {
 		opacity: 0;
-	}
+	}  */
 
-/* Gallery (style1) */
+/* Gallery (style1) 
 
 	.gallery.style1 {
 		background-color: #000000;
@@ -6668,9 +6118,9 @@ input, select, textarea {
 					padding: 1rem;
 				}
 
-		}
+		} */
 
-/* Gallery (style2) */
+/* Gallery (style2) 
 
 	.gallery.style2 {
 		background-color: #000000;
@@ -6985,7 +6435,7 @@ input, select, textarea {
 				padding: 2rem;
 			}
 
-		}
+		} */
 
 /* Gallery (lightbox) */
 
@@ -8228,6 +7678,12 @@ input, select, textarea {
 
 	.index > * {
 		border-top-color: rgba(0, 0, 0, 0.2);
+	}
+
+	.line {
+		height: 1px;
+		color: grey;
+		background-color: grey;
 	}
 
 /* Wrapper */
